# hospital-team1

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  main.py  performance_results.csv  pyproject.toml  serve.py  test.py  timeout_prediction.py  wsgi.py
docs/: development_rules.md  index.md  module_map.md
hospital-team1/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  plan_content.txt  pyproject.toml  require.rtf  test.py  wsgi.py  四天冲刺计划表_中文版.docx  成员C_simulation_四天任务清单.md  更改要求.docx
hospital-team1/datasets/: README.md  patients_dataset.csv
hospital-team1/docs/: development_rules.md  report_outline.md
hospital-team1/scripts/: launch_gui.py  run_simulation.py
hospital-team1/tests/: test_smoke.py
hospital_team1/: __init__.py  calculator.py
hospital_team1/analysis/: __init__.py  performance.py  performance_analysis.py  predictor.py  timeout_prediction.py  waiting_room_analytics.py  waiting_room_insights.py
hospital_team1/analysis_part2/: performance.py  performance_analysis.py  predictor.py  run_analysis.py  timeout_prediction.py  waiting_room_analytics.py  waiting_room_insights.py
hospital_team1/data/: __init__.py  csv_loader.py  dataset_generator.py
hospital_team1/data_part1/: csv_loader.py  dataset_generator.py
results/: performance_results.csv
scripts/: auto_sync.ps1  benchmark_priority_queues.py  generate_dataset.py  launch_gui.py  run_simulation.py
slides/: Hospital_Triage_Presentation.pptx  README.md  generate_ppt.js  ppt大纲.docx
tests/: test_calculator.py  test_smoke.py
unpacked_plan/: [Content_Types].xml
(+92 files in other folders)
